<resources>
<!--    <string name="app_name">F49</string>-->
<!--    <string name="app_name">Home CBL</string>-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Thông báo</string>

    <!-- error -->
    <string name="no_data">Không có dữ liệu.</string>
    <string name="network_not_available">Không có kết nối mạng. Vui lòng kiểm tra lại.</string>
    <string name="cannot_connect_server">Không thể kết nối với máy chủ. Vui lòng thử lại sau.</string>
    <string name="server_error">Có lỗi xảy ra. Xin vui lòng thử lại.</string>

    <!-- common -->
    <string name="try_again">Thử lại</string>
    <string name="search">Tìm kiếm</string>
    <string name="success">Thành công!</string>
    <string name="view_all">Xem tất cả</string>
    <string name="please_enter_all">Xin vui lòng nhập đầy đủ thông tin</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="remember_account">Nhớ lần sau</string>
    <string name="forgot_password"><u>Quên mật khẩu</u>.</string>
    <string name="cam_do">Cầm đồ</string>
    <string name="tao_hop_dong_cam_do">Tạo hợp đồng cầm đồ</string>
    <string name="tao_hop_dong_gia_dung">Tạo hợp đồng gia dụng</string>
    <string name="dinh_gia">Định giá</string>
    <string name="do_gia_dung">Đồ gia dụng</string>
    <string name="dash_board">Tiện ích</string>
    <string name="message">Tin nhắn</string>
    <string name="toi">Tôi</string>
    <string name="change_pass_word">Đổi mật khẩu</string>
    <string name="store_default">Mặc định cửa hàng</string>
    <string name="config">Cấu hình</string>
    <string name="phone">Điện thoại</string>
    <string name="date_register">Ngày đăng ký</string>
    <string name="nhan_hieu">Nhãn hiệu</string>
    <string name="title">Tiêu đề</string>
    <string name="sotien">Số tiền</string>
    <string name="describe">Mô tả</string>
    <string name="xu_ly">Xử lý</string>
    <string name="info_camdo">Thông tin cầm đồ</string>
    <string name="ho_ten">Họ và tên</string>
    <string name="hinh_anh">Hình ảnh</string>
    <string name="tai_san">Tài sản</string>
    <string name="info_dinhgia">Thông tin định giá</string>
    <string name="info_do_gia_dung">Thông tin đồ gia dụng</string>
    <string name="hd_mo">HD mở</string>
    <string name="hd_thanhly">HD thanh lý</string>
    <string name="hd_tat_toan">HD tất toán</string>
    <string name="manager_contact">Quản lý hợp đồng cầm đồ</string>
    <string name="plusMin">+/-</string>
    <string name="du_no">Dư nợ</string>
    <string name="Total">Tổng</string>
    <string name="list_contract">Danh sách hợp đồng</string>
    <string name="filter">Bộ lọc</string>
    <string name="hint_bts_contract">Tìm theo tên,ĐT,Số CM,hợp đồng</string>
    <string name="hoan_tat">Hoàn tất</string>
    <string name="cancel">Huỷ</string>
    <string name="dat_lai">Đặt lại</string>
    <string name="old_pasword">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Xác nhận lại mật khẩu mới</string>
    <string name="number_of_contract">Số hợp đồng</string>
    <string name="name_customer">Tên KH</string>
    <string name="expriedDate">Ngày đến hạn</string>
    <string name="lai">Lãi</string>
    <string name="fee">Phí</string>
    <string name="total">Tổng</string>
    <string name="nhac_no">Nhắc nợ</string>
    <string name="appointDate">Ngày hẹn</string>
    <string name="content">Nội dung</string>
    <string name="do_de_lai">Đồ để lại</string>
    <string name="info_contract">Thông tin hợp đồng cầm đồ</string>
    <string name="quan_ly_thu_chi">Quản lý thu chi</string>
    <string name="provide_account">Xin vui lòng nhập email và password.</string>
    <string name="logout">Đăng xuất</string>
    <string name="thu">Thu</string>
    <string name="chi">Chi</string>
    <string name="nguoi_thuc_hien">Người thực hiện</string>
    <string name="store">Cửa hàng</string>
    <string name="date_thuc_hien">Ngày thực hiện</string>
    <string name="ly_do">Lý do</string>
    <string name="ghi_chu">Ghi chú</string>
    <string name="thong_tin_thu_chi">Thông tin thu chi</string>
    <string name="rut_lai_cua_hang">Rút lãi cửa hàng</string>
    <string name="so_tien">Số tiền</string>
    <string name="status">Trạng thái</string>
    <string name="y_kien">Ý kiến</string>
    <string name="tu_choi">Từ chối</string>
    <string name="thong_tin_rut_lai">Thông tin rút lãi</string>
    <string name="accept">Đồng ý</string>
    <string name="duyet_successfully">Duyệt thành công.</string>
    <string name="provide_ykien">Xin vui lòng nhập ý kiến của bạn.</string>
    <string name="quan_ly_cam_do_gia_dung">Quản lý cầm đồ gia dụng</string>
    <string name="quan_ly_hop_dong_tra_gop">Quản lý hợp đồng trả góp</string>
    <string name="thong_tin_do_gia_dung">Thông tin cầm đồ gia dụng</string>
    <string name="thong_tin_hd_tra_gop">Thông tin hợp đồng trả góp</string>
    <string name="read_all">Đọc tất cả</string>
    <string name="dong_y">Đồng ý</string>
    <string name="tuchoi_successfully">Từ chối thành công</string>
    <string name="rut_von">Rút vốn</string>
    <string name="thong_tin_rut_von">Thông tin rút vốn</string>
    <string name="ten_tai_san">Tên tài sản</string>
    <string name="mo_ta">Mô tả</string>
    <string name="trang_thai">Trạng thái</string>
    <string name="ngay_vao">Ngày vào</string>
    <string name="ngay_ra">Ngày ra</string>
    <string name="ck_xe_kcc">Ck Xe.KCC</string>
    <string name="co_chia_khoa">Có chìa khoá</string>
    <string name="noi_luu">Nơi lưu</string>
    <string name="nagy_tl">Ngày TL</string>
    <string name="sotien_TL">Số tiền TL</string>
    <string name="tai_san_thanh_ly">Tài sản thanh lý</string>
    <string name="khach_hang">Khách Hàng</string>
    <string name="ngay_thanh_ly">Ngày thanh lý</string>
    <string name="thong_tin_thanh_ly_tai_san">Thông tin tài sản thanh lý</string>
    <string name="find">Tìm</string>
    <string name="tac_vu">Tác vụ</string>
    <string name="lich_su_giao_dich">Lịch sử giao dịch</string>
    <string name="lich_su_vay">Lịch sử vay</string>
    <string name="cho_vay">Cho vay</string>
    <string name="no_goc">Nợ gốc</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="view_more">Xem thêm</string>
    <string name="no_data_to_loadmore">Không còn dữ liệu để tải.</string>
    <string name="goc_da_thu">Gốc đã thu</string>
    <string name="tinh_trang">Tình trạng</string>
    <string name="ngay_dl">Ngày HL</string>
    <string name="ngay_gd">Ngày GD</string>
    <string name="thu_ve">Thu về</string>
    <string name="thu_lai">Thu lãi</string>
    <string name="lai_tra_lai">Lãi trả lại</string>
    <string name="phi_khac">Phí khác</string>
    <string name="no_lai">Nợ lãi</string>
    <string name="chi_tiet_lich_su_giao_dich">Chi tiết lịch sử giao dịch</string>
    <string name="lai_thu">Lãi thu</string>
    <string name="hinh_thuc_vay">Hình thức vay</string>
    <string name="ngay_vay">Ngày vay</string>
    <string name="ngay_ki">Số ngày/Kỳ</string>
    <string name="ngay_vao_so">Ngày vào sổ</string>
    <string name="so_hd">Số HĐ</string>
    <string name="cua_hang">Cửa hàng</string>
    <string name="ten_kh">Tên KH</string>
    <string name="chi_tiet_lich_su_vay">Chi tiết lịch sử vay</string>
    <string name="ban_muon_xoa">Bạn chắc chắn muốn xoá?</string>
    <string name="hddngd">Quản lý hợp đồng dư nợ giảm dần</string>
    <string name="tt_hddngd">Thông tin hợp đồng dư nợ giảm dần</string>
    <string name="dong_lai">Đóng lãi</string>
    <string name="add_image">Thêm hình ảnh</string>
    <string name="are_you_sure_delete_this_image">Bạn chắc chắn muốn xoá ảnh này?</string>
    <string name="max_image">Chỉ được upload tối đa 10 ảnh.</string>
    <string name="chon_anh">Xin vui lòng chọn ít nhất 1 ảnh.</string>
    <string name="l_y_nh_t_b_nh">Lấy ảnh từ bộ nhớ</string>
    <string name="ch_p_nh_t_camera">Chụp ảnh từ camera</string>
    <string name="upload_fail">Upload ảnh lỗi. Xin vui lòng thử lại.</string>
    <string name="upload_thanhcong">Upload ảnh thành công.</string>
    <string name="von_cho_vay">Vốn cho vay</string>
    <string name="von_thu_ve_tu_hop_dong">Vốn thu về từ hợp đồng</string>
    <string name="lai_le_phi_thu_duoc">Lãi, lệ phí thu được</string>
    <string name="tang_giam_thanh_ly">Tăng giảm thanh lý</string>
    <string name="von_vay_ngoai">Vốn vay ngoài</string>
    <string name="dau_tu_rut_von">Đầu tư - rút vốn</string>
    <string name="bien_dong_tien_mat_trong_ky">Biến động tiền mặt trong kỳ</string>
    <string name="thanh_ly">Thanh lý</string>
    <string name="tien_mat">Tiền mặt</string>
    <string name="tien_cuoi_ky">Tiền cuối kỳ</string>
    <string name="tien_dau_ky">Tiền đầu kỳ</string>
    <string name="bao_cao_tong_hop">Báo cáo tổng hợp</string>
    <string name="can_doi_thu_chi">Cân đối thu chi</string>
    <string name="tu_ngay">Từ ngày</string>
    <string name="den_ngay">Đến ngày</string>
    <string name="stt">STT</string>
    <string name="tien_hoa_hong">Tiền hoa hồng</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="invalid_data">Xin vui lòng nhập đầy đủ thông tin</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="so_tien_vay">Số tiền vay</string>
    <string name="giao_dich">Giao dịch</string>
    <string name="phai_thu">Phải thu</string>
    <string name="thuc_hien">Thực hiện</string>
    <string name="thu_thuc_te">Thu thực tế</string>
    <string name="nhap_thu_thuc_te">Vui lòng nhập số tiền thu thực tế.</string>
    <string name="ngay_hieu_luc">Ngày hiệu lực</string>
    <string name="flashlight_turned_on">Đã bật đèn flash</string>
    <string name="flashlight_turned_off">Đã tắt đèn flash</string>
    <string name="ki_dong_lai">Kì đóng lãi</string>
    <string name="ngay_cat_lai">Ngày cắt lãi</string>
    <string name="cat_lai">Cắt lãi</string>
    <string name="lai_suat">Lãi suất</string>
    <string name="phi">Phí</string>
    <string name="khach_nhan">Khách nhận</string>
    <string name="so_ngay_vay">Số ngày vay</string>
    <string name="so_tien_lai">Số tiền lãi</string>
    <string name="tien_thu_phi">Tiền thu phí</string>
    <string name="tra_gop">Trả góp</string>
    <string name="thu_phi_truoc">Thu phí trước</string>
    <string name="title_info_asset">Thông tin tài sản</string>
    <string name="close">ĐÓNG</string>
    <string name="create_contract">LẬP HỢP ĐỒNG</string>
    <string name="save">LƯU</string>
    <string name="area">Vị trí</string>
    <string name="pricing">Định giá</string>
    <string name="description">Mô tả</string>
    <string name="cmnd">Số CMND</string>
    <string name="que_quan">Quê quán</string>
    <string name="create_success"> Tạo hợp đồng thành công !! </string>
    <string name="hd_giadung">Hợp đồng gia dụng</string>
    <string name="hd_tragop">Hợp đồng trả góp</string>
    <string name="min_Lai">Giá trị lãi không được lớn hơn 100</string>
    <string name="min_phi">Giá trị phí không được lớn hơn 100</string>
    <string name="not_empty_assets">Tài sản không được để trống !!</string>
    <string name="not_empty_name">Tên khách hàng và SDT là bắt buộc !!!</string>

</resources>
