<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_tab_home_png"
            app:showAsAction="always"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_tab_dashboard"
            app:showAsAction="always"
            android:title="@string/dash_board"/>


    <item
            android:id="@+id/navigation_message"
            app:showAsAction="always"
            android:title=""/>
    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_tab_notification"
            app:showAsAction="always"
            android:title="@string/title_notifications"/>
    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_tab_profile"
            app:showAsAction="always"
            android:title="@string/toi"/>

</menu>
