<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:id="@+id/lnTaiSan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp">
        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                style="@style/LnHorizontalWeightSum">

            <TextView
                    style="@style/TextViewLeftInfoCamdo"
                    android:text="@string/tai_san" />

            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_128"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="7"
                    android:background="@drawable/bg_boder_gray">

                <Spinner
                        android:id="@+id/spSelectTaiSanOther"
                        style="@style/SpinnerStore">

                </Spinner>

                <ImageView style="@style/ImageSpinner" />
            </RelativeLayout>
        </LinearLayout>

        <View
                android:layout_marginTop="8dp"
                style="@style/Line" />
        </android.support.v7.widget.CardView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

            <LinearLayout style="@style/LnHorizontalWeightSum">

                <TextView
                        style="@style/TextViewLeftInfoCamdo"
                        android:text="@string/area" />

                <EditText
                        android:id="@+id/edtViTri"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_128"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="7"
                        android:background="@drawable/bg_boder_gray"
                        android:inputType="number"
                        android:paddingStart="@dimen/toolbar_half_padding_horizontal" />
            </LinearLayout>

            <View style="@style/Line" />

            <LinearLayout style="@style/LnHorizontalWeightSum">

                <TextView
                        style="@style/TextViewLeftInfoCamdo"
                        android:text="@string/pricing" />

                <EditText
                        android:id="@+id/edtDinhGia"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_128"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="7"
                        android:background="@drawable/bg_boder_gray"
                        android:inputType="number"
                        android:paddingStart="@dimen/toolbar_half_padding_horizontal" />
            </LinearLayout>

            <View style="@style/Line" />

            <LinearLayout style="@style/LnHorizontalWeightSum">

                <TextView
                        style="@style/TextViewLeftInfoCamdo"
                        android:text="@string/description" />

                <EditText
                        android:id="@+id/edtMota"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_128"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="7"
                        android:background="@drawable/bg_boder_gray"
                        android:inputType="text"
                        android:paddingStart="@dimen/toolbar_half_padding_horizontal" />
            </LinearLayout>

            <View style="@style/Line" />

            <LinearLayout style="@style/LnHorizontalWeightSum">

                <TextView
                        style="@style/TextViewLeftInfoCamdo"
                        android:text="@string/hinh_anh" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvImageCollateralOther"
                    app:spanCount="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="1"
                    android:overScrollMode="never"
                    tools:listitem="@layout/row_image" />
        </LinearLayout>
    </LinearLayout>


    <android.support.constraint.ConstraintLayout
            android:id="@+id/menuBot"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="?actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tvSaveOther"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_btn_action"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:0.23"
                app:layout_constraintEnd_toStartOf="@+id/tvCloseOther"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.45" />

        <TextView
                android:id="@+id/tvCloseOther"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_btn_cancel_red"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:0.23"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvSaveOther"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.45" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>