<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginBottom="@dimen/dp_4">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout style="@style/LnHorizontalWeightSum">
            <TextView
                    android:id="@+id/tvSTT"
                    style="@style/TextViewLeftInfoKhachHang"
                    android:layout_weight="1"
                    tools:text="1"
                    android:paddingStart="@dimen/toolbar_half_padding_horizontal" />
            <TextView
                    style="@style/TextViewLeftInfoKhachHang"
                    android:text="@string/ho_ten" />

            <TextView
                    android:id="@+id/tvHoTen"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_128"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/toolbar_half_padding_horizontal" />
        </LinearLayout>


        <LinearLayout style="@style/LnHorizontalWeightSum">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="1"/>
            <TextView
                    style="@style/TextViewLeftInfoKhachHang"
                    android:text="@string/cmnd" />

            <TextView
                    android:id="@+id/tvCMND"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_128"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="7"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/toolbar_half_padding_horizontal" />
        </LinearLayout>

        <LinearLayout style="@style/LnHorizontalWeightSum">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="1"/>
            <TextView
                    style="@style/TextViewLeftInfoKhachHang"
                    android:text="@string/phone" />

            <TextView
                    android:id="@+id/tvSDT"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_128"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="7"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/toolbar_half_padding_horizontal" />
        </LinearLayout>

        <LinearLayout style="@style/LnHorizontalWeightSum">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="1"/>
            <TextView
                    style="@style/TextViewLeftInfoKhachHang"
                    android:text="@string/que_quan" />

            <TextView
                    android:id="@+id/tvQueQuan"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_128"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="7"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/toolbar_half_padding_horizontal" />
        </LinearLayout>

        <View style="@style/Line" />
    </LinearLayout>
</android.support.v7.widget.CardView>